# ferrus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/ferrus-cli/: Cargo.toml
crates/ferrus-cli/src/: main.rs
crates/ferrus-core/: Cargo.toml
crates/ferrus-core/src/: boot.rs  copy.rs  device.rs  error.rs  format.rs  lib.rs  partition.rs  progress.rs  source.rs  windows.rs
crates/ferrus-core/src/boot/: mod.rs  tests.rs
crates/ferrus-core/src/copy/: mod.rs  stream.rs  tests.rs  tree.rs  windows.rs
crates/ferrus-core/src/device/: mod.rs  target.rs  tests.rs  types.rs
crates/ferrus-core/src/partition/: mod.rs  plan.rs  tests.rs  windows.rs
crates/ferrus-core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/ferrus-core/src/platform/linux/: mod.rs  mount.rs  mounts.rs  partition.rs  sysfs.rs  tests.rs  write.rs
crates/ferrus-core/src/windows/: mod.rs  profile.rs  tests.rs
crates/ferrus-gui/: Cargo.toml
crates/ferrus-gui/src/: main.rs  tests.rs
crates/ferrus-helper/: Cargo.toml
crates/ferrus-helper/src/: lib.rs  main.rs  tests.rs
crates/ferrus-win32/: Cargo.toml
crates/ferrus-win32/src/: disk_write.rs  lib.rs
docs/adr/: 0001-gui-framework.md  0002-uefi-ntfs-vendoring.md  0003-privilege-elevation.md  0004-partitioning-tool.md  0005-ntfs-write-driver.md  0006-udf-reader.md  0007-windows-unsafe-isolation.md  0008-windows-gpt-write.md
docs/specs/: SPEC-TEMPLATE.md  bootloader.md  copy-windows.md  device-windows.md  device.md  gui.md  partition-format-windows.md  partition-format.md  privileged-helper.md  unattend.md  write.md
res/applications/: io.github.cdhdt.ferrus-software.desktop  io.github.cdhdt.ferrus.desktop
res/polkit/: io.github.cdhdt.ferrus.policy  io.github.cdhdt.ferrus.prepare.policy
res/uefi/: NOTICE
