[package]
name = "ferrus-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Command-line front-end for Ferrus."

[[bin]]
name = "ferrus"
path = "src/main.rs"

[dependencies]
ferrus-core.workspace = true
anyhow.workspace = true
clap.workspace = true
