[package]
name = "ferrus-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core engine for Ferrus: platform-abstracted bootable USB creation."

[dependencies]
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"

[dev-dependencies]
tempfile = "3.27.0"
