[package]
name = "ferrus-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core engine for Ferrus: platform-abstracted bootable USB creation."

[dependencies]
base64 = "0.22.1"
sha2 = "0.11.0"
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"

[dev-dependencies]
roxmltree = "0.21.1"
tempfile = "3.27.0"
