[package]
name = "ferrus-core"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core engine for Ferrus: platform-abstracted bootable USB creation."

[dependencies]
base64 = "0.22.1"
sha2 = "0.11.0"
thiserror.workspace = true
# Read-only UDF + ISO9660 parsers for the unprivileged, no-mount media *hint*
# (source::inspect_iso_kind): UDF detects Windows media (stub ISO9660), ISO9660
# detects generic (e.g. Linux) media. MIT-licensed (GPL-compatible). See ADR-0006:
# they back a non-authoritative hint only, never a destructive decision.
hadris-udf = "1.2"
hadris-iso = "1.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"

# The audited Win32 FFI (device enumeration). Windows-only; keeps the unsafe out
# of ferrus-core, which stays `#![forbid(unsafe_code)]` (ADR-0007).
[target.'cfg(windows)'.dependencies]
ferrus-win32 = { path = "../ferrus-win32" }

[dev-dependencies]
roxmltree = "0.21.1"
tempfile = "3.27.0"
