[package]
name = "ferrus-gui"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Graphical front-end for Ferrus (iced — see ADR-0001)."

[[bin]]
name = "ferrus-gui"
path = "src/main.rs"

[dependencies]
# The engine. The GUI consumes it and adds no business logic of its own.
ferrus-core = { path = "../ferrus-core" }
# GUI framework: iced (ADR-0001). Versions verified against crates.io, not from
# memory: iced 0.14 is the latest stable (functional application API).
iced = "0.14"
# Native file picker. rfd 0.17's default Linux backend is xdg-portal (pure Rust,
# no GTK build dependency); the desktop portal provides the dialog at runtime.
rfd = "0.17"
