[package]
name = "ferrus-gui"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Graphical front-end for Ferrus (iced — see ADR-0001)."

[[bin]]
name = "ferrus-gui"
path = "src/main.rs"

[dependencies]
# The engine. The GUI consumes it and adds no business logic of its own.
ferrus-core = { path = "../ferrus-core" }
# The privileged-helper contract + client (pkexec). The GUI never runs as root;
# it asks the helper (SPEC-0008). Pulls the Request/HelperEvent types + streaming.
ferrus-helper = { path = "../ferrus-helper" }
# Async channel bridging the blocking helper-stdout reader thread to an iced
# Task stream (Task::run). Same futures major as iced uses.
futures = "0.3"
# GUI framework: iced (ADR-0001). Versions verified against crates.io, not from
# memory: iced 0.14 is the latest stable (functional application API).
#
# Both renderers are pinned explicitly: `wgpu` (GPU, default) and `tiny-skia`
# (CPU/software fallback). tiny-skia MUST stay compiled — it is the escape hatch
# for GPUs/drivers that glitch text under wgpu (SPEC-0007), reachable via the
# ICED_BACKEND=tiny-skia environment variable. Both are already in iced's default
# features; listing them makes the intent load-bearing, not incidental.
iced = { version = "0.14", features = ["wgpu", "tiny-skia"] }
# Native file picker. rfd 0.17's default Linux backend is xdg-portal (pure Rust,
# no GTK build dependency); the desktop portal provides the dialog at runtime.
rfd = "0.17"
