[package]
name = "ferrus-win32"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Audited Win32 FFI for Ferrus device enumeration — the workspace's only unsafe (ADR-0007)."

# Windows-only. On other targets the crate compiles to nothing (`#![cfg(windows)]`
# in lib.rs), and ferrus-core only depends on it under `cfg(windows)`.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemInformation",
] }
